[package]
name = "pybgpkit-parser"
description = "BGPKIT Parser Python Binding"
keywords = ["bgp", "mrt", "parser"]
repository = "https://github.com/bgpkit/bgpkit-parser-py"
documentation = "https://docs.rs/bgpkit-parser-py"
version = "0.5.0-beta.1"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
name = "pybgpkit_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
bgpkit-parser = "0.10.0"
pyo3 = { version = "0.20.2", features = ["extension-module"] }
dict_derive = "0.5.0"

[build-dependencies]
pyo3-build-config = "0.20.2"
