[package]
name = "pybgpkit-parser"
description = "BGPKIT Parser Python Binding"
keywords = ["bgp", "mrt", "parser"]
repository = "https://github.com/bgpkit/bgpkit-parser-py"
documentation = "https://docs.rs/bgpkit-parser-py"
version = "0.6.2"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
name = "pybgpkit_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
bgpkit-parser = "0.11.1"
pyo3 = { version = "0.25", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[build-dependencies]
pyo3-build-config = "0.25"
