[package]
name = "pybgpkit-parser"
description = "BGPKIT Parser Python Binding"
keywords = ["bgp", "mrt", "parser"]
repository = "https://github.com/bgpkit/bgpkit-parser-py"
documentation = "https://docs.rs/bgpkit-parser-py"
version = "0.18.0"
authors = ["Mingwei Zhang <mingwei@bgpkit.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"

[lib]
name = "pybgpkit_parser"
crate-type = ["cdylib", "rlib"]

[dependencies]
bgpkit-parser = "0.18.0"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

[build-dependencies]
pyo3-build-config = "0.28"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "parse_bench"
harness = false
